[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopline-sdk-python"
version = "0.1.6"
description = "Shopline OpenAPI on python implement. (From https://open-api.docs.shoplineapp.com)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "HsOjo", email = "1134031392@qq.com"}
]
keywords = ["shopline", "api", "sdk", "ecommerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/hsojo/shopline-sdk-python"
Documentation = "https://open-api.docs.shoplineapp.com"
Repository = "https://github.com/hsojo/shopline-sdk-python"
"Bug Tracker" = "https://github.com/hsojo/shopline-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shopline_sdk*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
shopline_sdk = ["py.typed"]
